# dataset-dedupe-estimator

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md.jinja2  justfile  pyproject.toml
.github/workflows/: dev.yml  publish.yml
de/: __init__.py  cli.py  display.py  estimate.py  fileutils.py  formats.py  synthetic.py
de/tests/: test_cli.py  test_estimate.py  test_formats.py  test_synthetic.py
notebooks/: E.ipynb  parquet-cdc.ipynb  parquet-cdc.md  parquet-cdc.qmd
src/: fileutils.rs  lib.rs  show.rs  store.rs  xet.rs
