[package]
name = "de"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "de"
crate-type = ["cdylib"]

[dependencies]
gearhash = "0.1.3"
lz4 = "1.28.1"
lz4_flex = "0.11.3"
pyo3 = "0.23.3"
rayon = "1.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
indicatif = {version = "*", features = ["rayon"]}
png = "0.17.16"
