[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "de"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
  "click",
  "faker",
  "humanize",
  "jinja2",
  "numpy",
  "pandas",
  "pillow",
  "plotly",
  "pyarrow",
  "rich",
  "tqdm",
]

[project.scripts]
de = "de.cli:cli"

[tool.maturin]
module-name = "de.core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.8,<2.0", "mypy>=1.0", "pytest>=8.3.5", "ruff>=0.15.1"]

[tool.mypy]
ignore_missing_imports = true
